--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Contacts</a>
+            <a class="nav-link" href="checkout.html">Checkout</a>
           </li>
         </ul>
       </div>
